--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ compiler:
   - gcc
 
 before_install:
-  - apt-get update
+  - sudo apt-get update
 
 install:
-  - apt-get install -y build-essential cmake git python-dev libboost-python-dev python-numpy libeigen3-dev
+  - sudo apt-get install -y build-essential cmake git python-dev libboost-python-dev python-numpy libeigen3-dev
 
 before_script:
   - mkdir build
