--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,9 +156,11 @@ IF(WIN32)
   add_library( opengv ${OPENGV_SOURCE_FILES} ${OPENGV_HEADER_FILES} )
   add_library( random_generators test/random_generators.cpp test/random_generators.hpp test/experiment_helpers.cpp test/experiment_helpers.hpp test/time_measurement.cpp test/time_measurement.hpp )
 ELSE()
-  add_library( opengv SHARED ${OPENGV_SOURCE_FILES} ${OPENGV_HEADER_FILES} )
-  add_library( opengv_static STATIC ${OPENGV_SOURCE_FILES} ${OPENGV_HEADER_FILES} )
-  set_property(TARGET opengv_static PROPERTY POSITION_INDEPENDENT_CODE 1)
+  add_library( opengv_object OBJECT ${OPENGV_SOURCE_FILES} ${OPENGV_HEADER_FILES} )
+  set_property( TARGET opengv_object PROPERTY POSITION_INDEPENDENT_CODE 1 )
+  add_library( opengv SHARED $<TARGET_OBJECTS:opengv_object> )
+  add_library( opengv_static STATIC $<TARGET_OBJECTS:opengv_object> )
+
   add_library( random_generators SHARED test/random_generators.cpp test/random_generators.hpp test/experiment_helpers.cpp test/experiment_helpers.hpp test/time_measurement.cpp test/time_measurement.hpp )
   target_link_libraries(random_generators opengv)
 ENDIF()
